--- a/style.css
+++ b/style.css
@@ -1,7 +1,31 @@
 h1{
     text-align: center;
+    text-decoration: underline;
 }
 
-table{
-    border: 2px solid rgb(80, 6, 6);
+body{
+    background-color: aquamarine;
+}
+
+table, th, td{
+    border: 2px solid black;
+    border-collapse: collapse;
+    padding: 10px 10px;
+}
+
+[alt ^= "DWG"]{
+    max-width: 50%;
+    max-height: 50%;
+}
+
+.align{
+    
+    display: flex;
+    justify-content: center;
+
+}
+
+#small{
+    max-width: 50%;
+    max-height: 50%;
 }
